<resources>

    <string name="app_name">TheWay</string>
    <string name="log_in">LOG IN!</string>
    <string name="not_registered">Not Registered?</string>
    <string name="password">Password</string>
    <string name="register">REGISTER!</string>
    <string name="username_text">Username</string>
    <string name="find_a_route">" FIND A ROUTE "</string>
    <string name="start_your_route">" START YOUR ROUTE "</string>
    <string name="welcome"><![CDATA[Welcome \n <username>!]]></string>
    <string name="facebook_app_id">712534625571412</string>
    <string name="log_out">LOG OUT</string>
    <string name="title_activity_map">Map</string>
    <string name="bike_string">Bike</string>
    <string name="feet_string">Feet</string>
    <string-array name="difficulty_array">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string-array name="vehicles">
        <item>Feet</item>
        <item>Bike</item>
    </string-array>
    <string name="title_activity_path_info">PathInfoActivity</string>

</resources>
