<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/logo"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar" />

    <TextView
        android:text="@string/username_text"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_alig="@id/toolbar"
        android:layout_height="wrap_content"
        style="@style/textTextViewTheme"


        android:id="@+id/userTextView"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text=""
        android:textColor="@color/editTextColor"
        android:background="@color/colorText"
        android:ems="10"
        android:id="@+id/editTextUser"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_alignBottom="@+id/userTextView"
        android:layout_toRightOf="@+id/userTextView"
        android:layout_toEndOf="@+id/userTextView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:text=""
        android:textColor="@color/editTextColor"
        android:background="@color/colorText"
        android:ems="10"
        android:id="@+id/editTextMail"
        android:layout_below="@+id/editTextUser"
        android:layout_alignLeft="@+id/editTextUser"
        android:layout_alignStart="@+id/editTextUser"
        android:layout_marginTop="18dp"
        android:inputType="textWebEmailAddress" />

    <TextView
        android:text="E-mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"


        style="@style/textTextViewTheme"

        android:id="@+id/mailTextView"
        android:layout_alignBottom="@+id/editTextMail"
        android:layout_toLeftOf="@+id/editTextUser"
        android:layout_toStartOf="@+id/editTextUser" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_alignTop="@+id/pwdTextView"
        android:layout_alignLeft="@+id/editTextMail"
        android:layout_alignStart="@+id/editTextMail"
        android:id="@+id/editTextPwd"
        android:inputType="textPersonName|textPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_alignTop="@+id/rePwdTextView"
        android:layout_alignLeft="@+id/editTextPwd"
        android:layout_alignStart="@+id/editTextPwd"
        android:id="@+id/editTextRePwd"
        android:inputType="textPassword" />

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        style="@style/textTextViewTheme"
        android:id="@+id/pwdTextView"
        android:layout_below="@+id/editTextMail" />

    <TextView
        android:text="Re-type the password"
        android:layout_width="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        style="@style/textTextViewTheme"
        android:id="@+id/rePwdTextView"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/editTextPwd"
        android:layout_toLeftOf="@+id/editTextRePwd"
        android:layout_toStartOf="@+id/editTextRePwd" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:text="@string/register"
        style="@style/textButtonTheme"

        android:id="@+id/buttonRegister"
        android:layout_below="@+id/rePwdTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:text="Enter with Facebook!"
        style="@style/textButtonTheme"

        android:id="@+id/buttonRegisterFB"
        android:layout_below="@id/buttonRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp" />


</RelativeLayout>
